<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_auto_rotate"
        android:title="@string/pref_auto_rotate"
        android:summary="@string/pref_auto_rotate_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_subtitle"
        android:title="@string/pref_subtitle"
        android:summary="@string/pref_subtitle_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="pref_thumbnail_size"
        android:title="@string/pref_thumbnail_size"
        android:entries="@array/pref_thumbnail_size"
        android:entryValues="@array/pref_thumbnail_size_values"
        android:summary="%s"
        android:defaultValue="@string/pref_thumbnail_size_default" />
</PreferenceScreen>
